--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "ioredis": "^5.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
