--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "crypto-js": "^4.2.0",
     "ioredis": "^5.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
